fix(PageHeader): Extra content should be aligned with title, close #17564

--- a/components/page-header/style/index.less
+++ b/components/page-header/style/index.less
@@ -36,33 +36,35 @@
   }
 
   &-heading {
-    display: inline-block;
-    &-title {
-      display: inline-block;
-      padding-right: 12px;
-      color: @heading-color;
-      font-weight: bold;
-      font-size: 16px;
-      line-height: 1.4;
-    }
+    display: table;
+    width: 100%;
+    &-left-wrapper {
+      display: table-cell;
+      vertical-align: middle;
+      .@{pageheader-prefix-cls}-heading-title {
+        display: inline-block;
+        padding-right: 12px;
+        color: @heading-color;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 1.4;
+      }
 
-    &-sub-title {
-      display: inline-block;
-      padding-right: 12px;
-      color: @text-color-secondary;
-      font-size: 14px;
-      line-height: 1.8;
-    }
+      .@{pageheader-prefix-cls}-heading-sub-title {
+        display: inline-block;
+        padding-right: 12px;
+        color: @text-color-secondary;
+        font-size: 14px;
+        line-height: 1.8;
+      }
 
-    &-tags {
-      display: inline-block;
-      vertical-align: top;
+      .@{pageheader-prefix-cls}-heading-tags {
+        display: inline-block;
+      }
     }
 
     &-extra {
-      position: absolute;
-      top: 16px;
-      right: @page-header-padding-horizontal;
+      float: right;
       > * {
         margin-left: 8px;
       }
